Updated to v1.7.2 R0.2
Signed-off-by: Irmo van den Berge <bergerkiller@gmail.com>